src/test/resources/Parser/SyntaxErrors/IncompatibleTypesWhile.front
class A {

    void test (bool[][] b) {
        while(b[1]){}
    }

}